# Library-Book-Management

./: CMakeLists.txt
res/: books.toml  users.toml
src/: linked_list.h  main.cpp  model.h  utility.h
src/interface/: ftxui_interface.cpp  ftxui_interface.h  terminal_interface.cpp  terminal_interface.h
src/system/: application.cpp  application.h  user_interface.h
